# study

./: CMakeLists.txt  Package.cmake
cmake/: Package.cmake
opensource/lib/: libboost_atomic.so.1.67.0  libboost_chrono.so.1.67.0  libboost_container.so.1.67.0  libboost_context.so.1.67.0  libboost_contract.so.1.67.0  libboost_coroutine.so.1.67.0  libboost_date_time.so.1.67.0  libboost_filesystem.so.1.67.0  libboost_graph.so.1.67.0  libboost_iostreams.so.1.67.0  libboost_locale.so.1.67.0  libboost_log.so.1.67.0  libboost_log_setup.so.1.67.0  libboost_math_c99.so.1.67.0  libboost_math_c99f.so.1.67.0  libboost_math_c99l.so.1.67.0  libboost_math_tr1.so.1.67.0  libboost_math_tr1f.so.1.67.0  libboost_math_tr1l.so.1.67.0  libboost_prg_exec_monitor.so.1.67.0  libboost_program_options.so.1.67.0  libboost_random.so.1.67.0  libboost_regex.so.1.67.0  libboost_serialization.so.1.67.0  libboost_signals.so.1.67.0  libboost_stacktrace_addr2line.so.1.67.0  libboost_stacktrace_basic.so.1.67.0  libboost_stacktrace_noop.so.1.67.0  libboost_system.so.1.67.0  libboost_thread.so.1.67.0  libboost_timer.so.1.67.0  libboost_type_erasure.so.1.67.0  libboost_unit_test_framework.so.1.67.0  libboost_wave.so.1.67.0  libboost_wserialization.so.1.67.0  libcares.so.2.2.0  libz.so.1.2.11
opensource/lib/pkgconfig/: gflags.pc  protobuf-lite.pc  protobuf.pc
opensource/lib64/: libcrypto.so.1.1  libssl.so.1.1
opensource/lib64/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc  protobuf-lite.pc  protobuf.pc
wiseos/: main.cc
wiseos/common/: database.cc  database.h  threadpool.cc  threadpool.h
(+8 files in other folders)
